--- a/18_css/0_inline/index.html
+++ b/18_css/0_inline/index.html
@@ -4,7 +4,7 @@
        SoftDev pd2
        K18 -- CSS basics
        2021-11-23
-       time spent:
+       time spent: 1 hour
 
 	 WORK FILE for CSS
     -->
@@ -52,9 +52,9 @@
     </div>
 
     <div style="color: rgb(114, 114, 114);
-                  background-color: rgb(92, 92, 92);
-                  padding: 10px;
-                  text-align: right;">
+                background-color: rgb(92, 92, 92);
+                padding: 10px;
+                text-align: right;">
       Copyright &copy; 2021 Rachel Xiao and Wen Hao Dong
     </div>
 
