--- a/22_bt_wanderingWolverine_wenhaoD-rachelX/index.html
+++ b/22_bt_wanderingWolverine_wenhaoD-rachelX/index.html
@@ -77,8 +77,8 @@ K22 -- Who Does Frame Work For?
     <br>
 
     <h2>Features</h2>
-
-    <h3>These accordion items are hiding some features. Click on them to reveal them!</h3>
+    <h4 class="text-primary">Use "inspect element" or "view page source" to see the code</h4>
+    <h4>These accordion items are hiding some features. Click on them to reveal them!</h4>
     <!-- Accordion -->
     <div class="accordion" id="accordion-example">
       <div class="accordion-item">
@@ -95,7 +95,7 @@ K22 -- Who Does Frame Work For?
               <a href="https://talos.stuy.edu/" target="_blank" class="list-group-item list-group-item-action">Talos</a>
             </div>
             <!-- remove some borders and rounded corners of list groups-->
-            <br><p class="text-danger">A less exciting list group because it's styling "flushed" out haha</p>
+            <br><p class="text-danger">A less exciting list group because its styling is "flushed" out haha</p>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">An item</li>
               <li class="list-group-item">A second item</li>
@@ -156,8 +156,37 @@ K22 -- Who Does Frame Work For?
         </div>
       </div>
     </div>
+    <br>
 
     <!-- Alerts, Tables, Buttons -->
-
+    <h4>Look at the different colors we can use through Bootstrap!</h4>
+    <p class="lead">We just need to add "&lt;component_name&gt;-primary" as a class or whatever color type to change the colors!</p>
+    <h5>Button</h5>
+    <h5>Tables</h5>
+    <h5>Alerts</h5>
+      <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+      </div>
+      <div class="alert alert-secondary" role="alert">
+        A simple secondary alert—check it out!
+      </div>
+      <div class="alert alert-success" role="alert">
+        A simple success alert—check it out!
+      </div>
+      <div class="alert alert-danger" role="alert">
+        A simple danger alert—check it out!
+      </div>
+      <div class="alert alert-warning" role="alert">
+        A simple warning alert—check it out!
+      </div>
+      <div class="alert alert-info" role="alert">
+        A simple info alert—check it out!
+      </div>
+      <div class="alert alert-light" role="alert">
+        A simple light alert—check it out!
+      </div>
+      <div class="alert alert-dark" role="alert">
+        A simple dark alert—check it out!
+      </div>
   </body>
 </html>
