--- a/22_bt_wanderingWolverine_wenhaoD-rachelX/index.html
+++ b/22_bt_wanderingWolverine_wenhaoD-rachelX/index.html
@@ -71,9 +71,11 @@ time spent: 3.5 hours
       </p>
       <p>Put these in your head tag!</p>
       <code>
+        &lt;meta charset="utf-8"&gt;
+        &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
+        <br><br>
         &lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"&gt;
-        <br>
-        <br>
+        <br><br>
         &lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"&gt;&lt;/script&gt;
       </code>
       <br><br>
