--- a/27_js/index.html
+++ b/27_js/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
 <!--
-     Team Phantom Tollbooth :: Clyde Sinclair, Fierce Dragon
-     SoftDev pd0
+     Team Odin :: Rachel Xiao, Yuqing Wu
+     SoftDev pd2
      K27 -- Basic functions in JavaScript
-     2022-02-03r
+     2022-02-04
 -->
 
 <html lang="en">
