--- a/29_jsdom/index.html
+++ b/29_jsdom/index.html
@@ -37,7 +37,7 @@
       <li class="green blue">item 6</li>
       <li class="">item 7</li>
     </ol>
-    <button id="b1">Fibonacci</button>
+    <button id="b1" class="">Fibonacci</button>
     <button id="b2">Factorial</button>
     <button id="b3">GCD</button>
 
