--- a/29_jsdom/index.html
+++ b/29_jsdom/index.html
@@ -17,6 +17,8 @@
       .red   {color : #ff0000;}
       .green {color : #00ff00;}
       .blue  {color : #0000ff;}
+      .orange {color: #FFA500;}
+      .purple {color: #6a0dad;}
     </style>
   </head>
 
@@ -37,9 +39,11 @@
       <li class="green blue">item 6</li>
       <li class="">item 7</li>
     </ol>
-    <button id="b1" class="">Fibonacci</button>
-    <button id="b2">Factorial</button>
-    <button id="b3">GCD</button>
+    <button id="b1">fib(10)</button>
+    <button id="b2">fact(5)</button>
+    <div id="div3"></div>
+    <button id="b3">gcd(36,10)</button>
+    <button id="b4">pie??</button>
 
     <script src="dommy_consolery.js"></script>
 
