--- a/30_jsdraw/clickdraw.html
+++ b/30_jsdraw/clickdraw.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Team Odin :: Yuqing Wu, Rachel Xiao
+       SoftDev pd2
+       K30 -- JS Draw with Canvas
+       2022-02-14m
+
+       HTML file for Javascript canvas work
+  -->
   <head>
     <meta charset="utf-8"/>
     <title>basic JS canvas work</title>
@@ -23,5 +30,5 @@
   <button id="buttonClear">wipe</button>
 
   <script src="clickdraw.js"></script>
-  
+
 </html>
