--- a/30_jsdraw/clickdraw.html
+++ b/30_jsdraw/clickdraw.html
@@ -20,7 +20,7 @@
   <h2>demo</h2>
 
   <div>
-    <canvas height="600" weight="600"
+    <canvas height="600" width="600"
             id="slate">
             dis dat alt txt tho
     </canvas>
