--- a/30_jsdraw/clickdraw.html
+++ b/30_jsdraw/clickdraw.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- Team Odin :: Yuqing Wu, Rachel Xiao
        SoftDev pd2
-       K30 -- JS Draw with Canvas
+       K30 -- JS Paint
        2022-02-14m
 
        HTML file for Javascript canvas work
